# pyobs-weather-api

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: coverage.yml
pyobs_weather_api/: __init__.py  pyobs_weather_api.py  rest_adapter.py
pyobs_weather_api/models/: __init__.py  history.py  history_data.py  sensor.py  sensor_type.py  station.py  station_history.py
tests/: test_pyobs_weather_api.py
tests/models/: conftest.py  test_history.py  test_history_data.py  test_sensor.py  test_station.py  test_station_history.py
