[tool.poetry]
name = "pyobs-weather-api"
version = "0.1.0"
description = ""
authors = ["GermanHydrogen <admin@germanhydrogen.org>"]
readme = "README.md"
packages = [{include = "pyobs_weather_api"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
