[tool.poetry]
name = "pyobs-weather-api"
version = "0.1.0"
description = ""
authors = ["GermanHydrogen <admin@germanhydrogen.org>"]
readme = "README.md"
packages = [{include = "pyobs_weather_api"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
requests = "2.31.0"
pandas = {version="2.1.1", optional = true}

[tool.poetry.extras]
pandas = ["pandas"]

[tool.poetry.dev-dependencies]
pytest = "7.4.2"
pytest-mock = "3.11.1"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
